# matrec

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/matrec/: Graphic.h  Incidence.h  Matrix.h  Network.h  Shared.h  SignCheckRowAddition.h
src/: Graphic.c  Incidence.c  Matrix.c  Network.c  Shared.c  SignCheckRowAddition.c
test/: GraphicColumnAdditionTest.cpp  GraphicRowAdditionTest.cpp  GraphicTest.cpp  IncidenceTest.cpp  NetworkTest.cpp  TestHelpers.cpp  TestHelpers.h  main.cpp
